# new-hackathon-website

./: .replit  app.py  auth.py  chatbot.py  forms.py  google_auth.py  main.py  models.py  pyproject.toml  readme.md  requirement.txt  routes.py
attached_assets/: Pasted-mail-name-datetime-is-not-defined-Error-sending-email-name-datetime-is-not-defined-Error-sen-1743084833136.txt
instance/: app.db
opt/render/project/src/: pyproject.toml
static/css/: custom.css
static/js/: main.js
templates/: base.html  dashboard.html  index.html  login.html  scholarship_details.html  signup.html  verify_otp.html  verify_phone.html
