[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "auth>=0.5.3",
    "django-google-auth>=0.4.0",
    "email-validator>=2.2.0",
    "flask-wtf>=1.2.2",
    "flask>=3.1.0",
    "flask-login>=0.6.3",
    "flask-mail>=0.10.0",
    "flask-sqlalchemy>=3.1.1",
    "gunicorn>=23.0.0",
    "oauthlib>=3.2.2",
    "psycopg2-binary>=2.9.10",
    "sqlalchemy>=2.0.39",
    "google-generativeai>=0.8.4",
    "requests>=2.32.3",
    "werkzeug>=3.1.3",
    "wtforms>=3.2.1",
]
