[tool.poetry]
name = "your_project_name"
version = "0.1.0"
description = "A short description of your project"
authors = ["Your Name pathanfaizan0712@gmail.com"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
